--- a/packages/gatsby-theme-parliament/package.json
+++ b/packages/gatsby-theme-parliament/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@adobe/focus-ring-polyfill": "^0.1.5",
+    "@adobe/parliament-ui-components": "^2.0.3",
     "@emotion/core": "^10.0.28",
     "@mdx-js/mdx": "^1.6.6",
     "@mdx-js/react": "^1.6.6",
